--- a/src/pannel.html
+++ b/src/pannel.html
@@ -86,7 +86,7 @@
     </table>
 </div>
 
-
+<script src="/scripts/server.js"></script>
 <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
 </body>
 </html>
